[package]
name = "envapplier"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A tool to apply environment variables to files."
license = "MIT"
repository = "https://github.com/milkdrinkers/Env-Applier-RS"

[[bin]]
name = "ea"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4.0", features = ["derive"] }
thiserror = "1.0"
regex = "1.9"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.2"
anyhow = "1.0"
