[package]
name = "envapplier"
version = "0.0.7"
edition = "2021"
readme = "README.md"
description = "A tool to apply environment variables to files."
license = "MIT"
repository = "https://github.com/milkdrinkers/Env-Applier-RS"

[[bin]]
name = "ea"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
regex = "1"
toml = "0.8"
filetime = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
anyhow = "1.0"
